
[workspace]

members = [
    "adder",
    "branches",
    "coins",
    "collections",
    "concepts",
    "functions",
    "guessing_game",
    "hello_cargo",
    "ip_addresses",
    "loops",
    "messages",
    "minigrep",
    "option_enum",
    "ownership",
    "pointers",
    "rectangles",
    "restaurant",
    "strings",
    "structs",
    "variables",
]
