
[workspace]

members = [
    "adder",
    "branches",
    "coins",
    "collections",
    "concepts",
    "functions",
    "gpa_calculator",
    "guessing_game",
    "hello_cargo",
    "ip_addresses",
    "loops",
    "messages",
    "minigrep",
    "option_enum",
    "ownership",
    "pointers",
    "rectangles",
    "restaurant",
    "strings",
    "structs",
    "threads",
    "variables",
]
